--- a/Fighting-Game/Fighting-Game/Fighting-Game.vcxproj
+++ b/Fighting-Game/Fighting-Game/Fighting-Game.vcxproj
@@ -123,6 +123,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="gameLoop.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="players.cpp" />
+    <ClCompile Include="screen.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="gameLoop.h" />
+    <ClInclude Include="players.h" />
+    <ClInclude Include="screen.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
